--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p>At A&A we pride ourselves in providing top of the line cleaning services to our clients, with our seasoned staff and more than 24 years of experience in the janitorial field were ready for anything.</p>
           </blockquote>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="#about" class="btn-get-started">Get Started</a>
+            <a href="contact.html" class="btn-get-started">Get Started</a>
             <!-- <a href="./assets/img/production ID_4109227.mp4" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
           </div>
 
@@ -266,10 +266,10 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bi bi-dash"></i> <a href="#">Home</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Services</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Contact</a></li>
+              <li><i class="bi bi-dash"></i> <a href="index.html">Home</a></li>
+              <li><i class="bi bi-dash"></i> <a href="about.html">About us</a></li>
+              <li><i class="bi bi-dash"></i> <a href="services.html">Services</a></li>
+              <li><i class="bi bi-dash"></i> <a href="contact.html">Contact</a></li>
             </ul>
           </div>
 
@@ -308,7 +308,7 @@
       </div>
     </div>
   </footer><!-- End Footer -->
-  <!-- End Footer -->
+
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
