--- a/about.html
+++ b/about.html
@@ -5,9 +5,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Nova Bootstrap Template - About</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>A&A Cleaning Services LLC - Quality Residential and Commercial Cleaning</title>
+  <meta name="title" content="A&A Cleaning Services LLC - Quality Residential and Commercial Cleaning">
+  <meta name="description" content="A&A Cleaning Services LLC specializes in top-notch residential and commercial cleaning. Our family owned and operated business ensures comprehensive services with a personal touch. We use eco-friendly products, and are bonded and insured for your peace of mind. Choose us for our great work ethic and commitment to customer satisfaction.">
+  <meta name="keywords" content="A&A Cleaning Services LLC, cleaning services, residential cleaning, commercial cleaning, family owned, bonded, insured, eco-friendly products, great work ethic, customer satisfaction">
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -294,10 +296,10 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bi bi-dash"></i> <a href="#">Home</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Services</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Contact</a></li>
+              <li><i class="bi bi-dash"></i> <a href="index.html">Home</a></li>
+              <li><i class="bi bi-dash"></i> <a href="about.html">About us</a></li>
+              <li><i class="bi bi-dash"></i> <a href="services.html">Services</a></li>
+              <li><i class="bi bi-dash"></i> <a href="contact.html">Contact</a></li>
             </ul>
           </div>
 
