--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Nova Bootstrap Template - Contact</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>A&A Cleaning Services - Contact</title>
+  <meta content="Contact A&A Cleaning Services for superior cleaning services. Main location: Las Cruces, NM, Branch: Germantown, WI." name="description">
+  <meta content="Cleaning Services, Contact, A&A, Las Cruces, Germantown" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -29,12 +29,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Nova - v1.1.0
-  * Template URL: https://bootstrapmade.com/nova-bootstrap-business-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body class="page-contact">
@@ -90,8 +85,11 @@
             <div class="info-item d-flex">
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
-                <h4>Location:</h4>
+                <h4>Locations:</h4>
+                <h5>Main location</h5>
                 <p>1990 E Lohman Ave V13, Las Cruces, NM 88001</p>
+                <h5>Branch</h5>
+                <p>W175N11163 Stonewood Dr suite 211, Germantown, WI 53022</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -169,73 +167,70 @@
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
+ <!-- ======= Footer ======= -->
+ <footer id="footer" class="footer">
 
-    <div class="footer-content">
-      <div class="container">
-        <div class="row gy-4">
-          <div class="col-lg-5 col-md-12 footer-info">
-            <a href="index.html" class="logo d-flex align-items-center">
-              <span>Nova</span>
-            </a>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
-            <div class="social-links d-flex  mt-3">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-            </div>
+  <div class="footer-content">
+    <div class="container">
+      <div class="row gy-4">
+        <div class="col-lg-5 col-md-12 footer-info">
+          <a href="index.html" class="logo d-flex align-items-center">
+            <span>A&A Cleaning Services</span>
+          </a>
+          <p>At A&A we pride ourselves in providing top of the line cleaning services to our clients.</p>
+          <div class="social-links d-flex  mt-3">
+            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
+        </div>
 
-          <div class="col-lg-2 col-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bi bi-dash"></i> <a href="#">Home</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Services</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
+        <div class="col-lg-2 col-6 footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><i class="bi bi-dash"></i> <a href="index.html">Home</a></li>
+            <li><i class="bi bi-dash"></i> <a href="about.html">About us</a></li>
+            <li><i class="bi bi-dash"></i> <a href="services.html">Services</a></li>
+            <li><i class="bi bi-dash"></i> <a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
 
-          <div class="col-lg-2 col-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bi bi-dash"></i> <a href="#">Web Design</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Web Development</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Product Management</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Marketing</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
+        <div class="col-lg-2 col-6 footer-links">
+          <h4>Our Services</h4>
+          <ul>
+            <li><i class="bi bi-dash"></i> <a href="#">Janitorial</a></li>
+            <li><i class="bi bi-dash"></i> <a href="#">Residential</a></li>
+            <li><i class="bi bi-dash"></i> <a href="#">Moving</a></li>
+            <li><i class="bi bi-dash"></i> <a href="#">Deep clean</a></li>
+            <li><i class="bi bi-dash"></i> <a href="#">Green products</a></li>
+          </ul>
+        </div>
 
-          <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-            <h4>Contact Us</h4>
-            <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
-            </p>
-
-          </div>
+        <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
+          <h4>Contact Us</h4>
+          <p>
+            1990 E Lohman Ave V13<br>
+            Las Cruces, NM 88001<br>
+            United States <br><br>
+            <strong>Phone:</strong> (575) 277-2522<br>
+          </p>
 
         </div>
-      </div>
-    </div>
 
-    <div class="footer-legal">
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Nova</span></strong>. All Rights Reserved
-        </div>
-        
       </div>
     </div>
-  </footer><!-- End Footer -->
-  <!-- End Footer -->
+  </div>
+
+  <div class="footer-legal">
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>A&A Cleaning Services LLC</span></strong>. All Rights Reserved
+      </div>
+      
+    </div>
+  </div>
+</footer><!-- End Footer -->
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
