--- a/services.html
+++ b/services.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Nova Bootstrap Template - Services</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>A&A Cleaning Services LLC - Comprehensive Cleaning for Residential & Commercial Spaces</title>
+  <meta name="title" content="A&A Cleaning Services LLC - Comprehensive Cleaning for Residential & Commercial Spaces">
+  <meta name="description" content="A&A Cleaning Services LLC provides comprehensive residential and commercial cleaning in Las Cruces, NM and Milwaukee, WI. We offer a range of services including move in/out cleaning, post renovation cleaning, regular janitorial services, scheduled housekeeping, green cleaning, recurring cleaning, one-time deep cleaning and more.">
+  <meta name="keywords" content="A&A Cleaning Services LLC, cleaning services, residential cleaning, commercial cleaning, green cleaning, recurring cleaning, one-time cleaning, move in/out cleaning, post renovation cleaning, Las Cruces, Milwaukee">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -263,12 +264,10 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  A&A cleaning services are quick to getting the job done. They are super friendly and make sure to satisfy your needs, I highly recommend their business for commercial and residential services!
                 </p>
                 <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                  <h3>Saul Goodman</h3>
-                  <h4>Ceo &amp; Founder</h4>
+                  <h3>Melissa Ventura</h3>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -279,12 +278,9 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                </p>
+                  I have been using A&A Cleaning Services for the last few months now and so far they have done an amazing job! I would recommend them to all small business owners in the area looking for a professional crew that is willing to work around your schedule at a reasonable price point!                </p>
                 <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
+                  <h3>Patrick Connaughty</h3>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -295,12 +291,9 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                </p>
+                  A & A was very thorough in their assessment and cleaning. They were extremely responsive when I initially reached out and we were very happy with their service.  We will be utilizing them again very soon.                </p>
                 <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                  <h3>Jena Karlis</h3>
-                  <h4>Store Owner</h4>
+                  <h3>Michael Barbati</h3>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -311,12 +304,9 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                </p>
+                  A&A has been wonderful! We use them to clean the offices at our small business. I am so pleased with the service and value they provide. They do efficient and thorough work. I would highly recommend them to anyone looking for cleaning services!                </p>
                 <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                  <h3>Matt Brandon</h3>
-                  <h4>Freelancer</h4>
+                  <h3>Kevin Williams</h3>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -327,12 +317,9 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                </p>
+                  Family owed business that takes great care in helping you take care of your home. Everyone is considerate and detail oriented. We have utilized their services for routine cleanings as well as deep & specialty services. They have always made sure it was done right and above expectations.                </p>
                 <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                  <h3>John Larson</h3>
-                  <h4>Entrepreneur</h4>
+                  <h3>Steven&Heather Wah</h3>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -346,73 +333,70 @@
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
+ <!-- ======= Footer ======= -->
+ <footer id="footer" class="footer">
 
-    <div class="footer-content">
-      <div class="container">
-        <div class="row gy-4">
-          <div class="col-lg-5 col-md-12 footer-info">
-            <a href="index.html" class="logo d-flex align-items-center">
-              <span>Nova</span>
-            </a>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
-            <div class="social-links d-flex  mt-3">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-            </div>
+  <div class="footer-content">
+    <div class="container">
+      <div class="row gy-4">
+        <div class="col-lg-5 col-md-12 footer-info">
+          <a href="index.html" class="logo d-flex align-items-center">
+            <span>A&A Cleaning Services</span>
+          </a>
+          <p>At A&A we pride ourselves in providing top of the line cleaning services to our clients.</p>
+          <div class="social-links d-flex  mt-3">
+            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
+        </div>
 
-          <div class="col-lg-2 col-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bi bi-dash"></i> <a href="#">Home</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Services</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
+        <div class="col-lg-2 col-6 footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><i class="bi bi-dash"></i> <a href="index.html">Home</a></li>
+            <li><i class="bi bi-dash"></i> <a href="about.html">About us</a></li>
+            <li><i class="bi bi-dash"></i> <a href="services.html">Services</a></li>
+            <li><i class="bi bi-dash"></i> <a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
 
-          <div class="col-lg-2 col-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bi bi-dash"></i> <a href="#">Web Design</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Web Development</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Product Management</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Marketing</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
+        <div class="col-lg-2 col-6 footer-links">
+          <h4>Our Services</h4>
+          <ul>
+            <li><i class="bi bi-dash"></i> <a href="#">Janitorial</a></li>
+            <li><i class="bi bi-dash"></i> <a href="#">Residential</a></li>
+            <li><i class="bi bi-dash"></i> <a href="#">Moving</a></li>
+            <li><i class="bi bi-dash"></i> <a href="#">Deep clean</a></li>
+            <li><i class="bi bi-dash"></i> <a href="#">Green products</a></li>
+          </ul>
+        </div>
 
-          <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-            <h4>Contact Us</h4>
-            <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
-            </p>
-
-          </div>
+        <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
+          <h4>Contact Us</h4>
+          <p>
+            1990 E Lohman Ave V13<br>
+            Las Cruces, NM 88001<br>
+            United States <br><br>
+            <strong>Phone:</strong> (575) 277-2522<br>
+          </p>
 
         </div>
-      </div>
-    </div>
 
-    <div class="footer-legal">
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Nova</span></strong>. All Rights Reserved
-        </div>
-        
       </div>
     </div>
-  </footer><!-- End Footer -->
-  <!-- End Footer -->
+  </div>
+
+  <div class="footer-legal">
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>A&A Cleaning Services LLC</span></strong>. All Rights Reserved
+      </div>
+      
+    </div>
+  </div>
+</footer><!-- End Footer -->
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
