info for services updated

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="d-flex align-items-center">A&A</h1>
+        <h1 class="d-flex align-items-center">A&A Cleaning Services LLC</h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -49,10 +49,10 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html" >Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -87,9 +87,28 @@
               <div>
                 <h4>Locations:</h4>
                 <h5>Main location</h5>
+                <h6>Las Cruces, NM</h6>
                 <p>1990 E Lohman Ave V13, Las Cruces, NM 88001</p>
+                <br>
+                <div class="info-item d-flex">
+                  <i class="bi bi-phone flex-shrink-0"></i>
+                  <div>
+                    <h4>Call:</h4>
+                    <p>(575) 277-2522</p>
+                    <br>
+                  </div>
+                </div><!-- End Info Item -->
                 <h5>Branch</h5>
+                <h6>Milwaukee, WI</h6>
                 <p>W175N11163 Stonewood Dr suite 211, Germantown, WI 53022</p>
+                <br>
+                <div class="info-item d-flex">
+                  <i class="bi bi-phone flex-shrink-0"></i>
+                  <div>
+                    <h4>Call:</h4>
+                    <p>(262) 202-1693</p>
+                  </div>
+                </div><!-- End Info Item -->
               </div>
             </div><!-- End Info Item -->
 
@@ -98,14 +117,6 @@
               <div>
                 <h4>Email:</h4>
                 <p>aasupperclean@gmail.com</p>
-              </div>
-            </div><!-- End Info Item -->
-
-            <div class="info-item d-flex">
-              <i class="bi bi-phone flex-shrink-0"></i>
-              <div>
-                <h4>Call:</h4>
-                <p>(575) 277-2522</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -213,7 +224,8 @@
             1990 E Lohman Ave V13<br>
             Las Cruces, NM 88001<br>
             United States <br><br>
-            <strong>Phone:</strong> (575) 277-2522<br>
+            <strong>Las Cruses, NM Phone:</strong> (575) 277-2522<br>
+            <strong>Milwaukee, WI Phone:</strong> (262) 202-1693<br>
           </p>
 
         </div>
