--- a/services.html
+++ b/services.html
@@ -30,12 +30,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Nova - v1.1.0
-  * Template URL: https://bootstrapmade.com/nova-bootstrap-business-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="page-services">
@@ -47,7 +41,7 @@
     <a href="index.html" class="logo d-flex align-items-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="d-flex align-items-center">A&A</h1>
+      <h1 class="d-flex align-items-center">A&A Cleaning Services LLC</h1>
     </a>
 
     <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -55,9 +49,9 @@
 
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html" >Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
+        <li><a href="services.html" class="active">Services</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav><!-- .navbar -->
@@ -97,7 +91,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-house" style="color: #f57813;"></i></div>
             <div>
-              <h4 class="title"><a href="#" class="stretched-link">Residential Cleaning</a></h4>
+              <h4 class="title"><a href="residential-cleaning.html" class="stretched-link">Residential Cleaning</a></h4>
               <p class="description">A&A Cleaning Services LLC provides comprehensive cleaning for your residence, ensuring a healthy and clean environment for you and your family.</p>
             </div>
           </div>
@@ -106,7 +100,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist" style="color: #15a04a;"></i></div>
             <div>
-              <h4 class="title"><a href="#" class="stretched-link">Move In/Out Cleaning</a></h4>
+              <h4 class="title"><a href="move-in-move-out.html" class="stretched-link">Move In/Out Cleaning</a></h4>
               <p class="description">Preparing for a big move? We offer a thorough cleaning service to ensure your old or new space is clean and ready to be lived in.</p>
             </div>
           </div><!-- End Service Item -->
@@ -114,7 +108,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="icon flex-shrink-0"><i class="bi bi-bar-chart" style="color: #d90769;"></i></div>
             <div>
-              <h4 class="title"><a href="#" class="stretched-link">Post Renovation Cleaning Services</a></h4>
+              <h4 class="title"><a href="post-cleaning.html" class="stretched-link">Post Renovation Cleaning Services</a></h4>
               <p class="description">After construction or renovation, we can help remove the dust and debris, making your place shiny and new again.</p>
             </div>
           </div><!-- End Service Item -->
@@ -341,7 +335,7 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-info">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span>A&A Cleaning Services</span>
+            <span>A&A Cleaning Services LLC</span>
           </a>
           <p>At A&A we pride ourselves in providing top of the line cleaning services to our clients.</p>
           <div class="social-links d-flex  mt-3">
@@ -379,7 +373,8 @@
             1990 E Lohman Ave V13<br>
             Las Cruces, NM 88001<br>
             United States <br><br>
-            <strong>Phone:</strong> (575) 277-2522<br>
+            <strong>Las Cruses, NM Phone:</strong> (575) 277-2522<br>
+            <strong>Milwaukee, WI Phone:</strong> (262) 202-1693<br>
           </p>
 
         </div>
