--- a/about.html
+++ b/about.html
@@ -30,13 +30,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Nova - v1.1.0
-  * Template URL: https://bootstrapmade.com/nova-bootstrap-business-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="page-about">
@@ -48,7 +41,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="d-flex align-items-center">A&A</h1>
+        <h1 class="d-flex align-items-center">A&A Cleaning Services LLC</h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -56,8 +49,8 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="index.html" >Home</a></li>
+          <li><a href="about.html" class="active">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -320,7 +313,8 @@
               1990 E Lohman Ave V13<br>
               Las Cruces, NM 88001<br>
               United States <br><br>
-              <strong>Phone:</strong> (575) 277-2522<br>
+              <strong>Las Cruses, NM Phone:</strong> (575) 277-2522<br>
+              <strong>Milwaukee, WI Phone:</strong> (262) 202-1693<br>
             </p>
 
           </div>
