--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="d-flex align-items-center">A&A Cleaning Services</h1>
+        <h1 class="d-flex align-items-center">A&A Cleaning Services LLC</h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -290,7 +290,8 @@
               1990 E Lohman Ave V13<br>
               Las Cruces, NM 88001<br>
               United States <br><br>
-              <strong>Phone:</strong> (575) 277-2522<br>
+              <strong>Las Cruses, NM Phone:</strong> (575) 277-2522<br>
+            <strong>Milwaukee, WI Phone:</strong> (262) 202-1693<br>
             </p>
 
           </div>
