--- a/contact.html
+++ b/contact.html
@@ -190,10 +190,7 @@
           </a>
           <p>At A&A we pride ourselves in providing top of the line cleaning services to our clients.</p>
           <div class="social-links d-flex  mt-3">
-            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.facebook.com/people/AA-cleaning-services/100067482145097/" class="facebook"><i class="bi bi-facebook"></i></a>
           </div>
         </div>
 
@@ -210,11 +207,11 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><i class="bi bi-dash"></i> <a href="#">Janitorial</a></li>
-            <li><i class="bi bi-dash"></i> <a href="#">Residential</a></li>
-            <li><i class="bi bi-dash"></i> <a href="#">Moving</a></li>
-            <li><i class="bi bi-dash"></i> <a href="#">Deep clean</a></li>
-            <li><i class="bi bi-dash"></i> <a href="#">Green products</a></li>
+            <li><i class="bi bi-dash"></i> <a href="residential-janitorial.html">Janitorial</a></li>
+            <li><i class="bi bi-dash"></i> <a href="residential-cleaning.html">Residential</a></li>
+            <li><i class="bi bi-dash"></i> <a href="move-in-move-out.html">Moving</a></li>
+            <li><i class="bi bi-dash"></i> <a href="scheduled-housekeeping.html">Scheduled</a></li>
+            <li><i class="bi bi-dash"></i> <a href="green-cleaning.html">Green products</a></li>
           </ul>
         </div>
 
@@ -224,7 +221,7 @@
             1990 E Lohman Ave V13<br>
             Las Cruces, NM 88001<br>
             United States <br><br>
-            <strong>Las Cruses, NM Phone:</strong> (575) 277-2522<br>
+            <strong>Las Cruces, NM Phone:</strong> (575) 277-2522<br>
             <strong>Milwaukee, WI Phone:</strong> (262) 202-1693<br>
           </p>
 
