--- a/move-in-move-out.html
+++ b/move-in-move-out.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Nova Bootstrap Template - Blog</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+    <title>Move In/Out Cleaning Services | A&A Cleaning Services LLC</title>
+    <meta name="description" content="At A&A Cleaning Services LLC, we offer comprehensive move in/move out cleaning services to ease your transition and ensure your home is spotless. Whether you're moving into a new home or leaving one behind, our team provides detailed cleaning solutions tailored to your needs. Get a free estimate today!">
+    <meta name="keywords" content="Move In Cleaning, Move Out Cleaning, Residential Cleaning, Cleaning Services, Free Cleaning Estimate, A&A Cleaning Services LLC">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -142,47 +142,43 @@
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
-              <span>Nova</span>
+              <span>A&A Cleaning Services</span>
             </a>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <p>At A&A we pride ourselves in providing top of the line cleaning services to our clients.</p>
             <div class="social-links d-flex  mt-3">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.facebook.com/people/AA-cleaning-services/100067482145097/" class="facebook"><i class="bi bi-facebook"></i></a>
             </div>
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bi bi-dash"></i> <a href="#">Home</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Services</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bi bi-dash"></i> <a href="index.html">Home</a></li>
+              <li><i class="bi bi-dash"></i> <a href="about.html">About us</a></li>
+              <li><i class="bi bi-dash"></i> <a href="services.html">Services</a></li>
+              <li><i class="bi bi-dash"></i> <a href="contact.html">Contact</a></li>
             </ul>
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bi bi-dash"></i> <a href="#">Web Design</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Web Development</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Product Management</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Marketing</a></li>
-              <li><i class="bi bi-dash"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bi bi-dash"></i> <a href="residential-janitorial.html">Janitorial</a></li>
+              <li><i class="bi bi-dash"></i> <a href="residential-cleaning.html">Residential</a></li>
+              <li><i class="bi bi-dash"></i> <a href="move-in-move-out.html">Moving</a></li>
+              <li><i class="bi bi-dash"></i> <a href="scheduled-housekeeping.html">Scheduled</a></li>
+              <li><i class="bi bi-dash"></i> <a href="green-cleaning.html">Green products</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Contact Us</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
+              1990 E Lohman Ave V13<br>
+              Las Cruces, NM 88001<br>
               United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Las Cruces, NM Phone:</strong> (575) 277-2522<br>
+            <strong>Milwaukee, WI Phone:</strong> (262) 202-1693<br>
             </p>
 
           </div>
@@ -194,18 +190,12 @@
     <div class="footer-legal">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>Nova</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>A&A Cleaning Services LLC</span></strong>. All Rights Reserved
         </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nova-bootstrap-business-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
+        
       </div>
     </div>
-  </footer><!-- End Footer --><!-- End Footer -->
+  </footer><!-- End Footer -->
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
