--- a/scheduled-housekeeping.html
+++ b/scheduled-housekeeping.html
@@ -129,10 +129,7 @@
             </a>
             <p>At A&A we pride ourselves in providing top of the line cleaning services to our clients.</p>
             <div class="social-links d-flex  mt-3">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.facebook.com/people/AA-cleaning-services/100067482145097/" class="facebook"><i class="bi bi-facebook"></i></a>
             </div>
           </div>
 
