--- a/one-time-cleaning.html
+++ b/one-time-cleaning.html
@@ -79,7 +79,7 @@
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
             <article class="blog-details text-center">
               <div class="post-img ">
-                <img src="assets/img/blog/blog-1.jpg" alt="" class="img-fluid">
+                <img src="assets/img/blog/eve-1.jpg" alt="people eating at event" class="img-fluid">
               </div>
               <h2 class="title">Relax and Enjoy Your Event with<br> A&A Cleaning Services LLC One Time Cleaning</h2>
               <div class="content">
@@ -101,7 +101,7 @@
                 <p>
                   If you're ready to schedule your one-time cleaning, just complete our estimate form, and we’ll give you a call. Alternatively, you can save a step and call A&A Cleaning Services LLC directly. We believe in open communication and strive to understand all your expectations beforehand to ensure we exceed them.
                 </p>
-                <img src="assets/img/blog/blog-inside-post.jpg" class="img-fluid" alt="">
+                <img src="assets/img/blog/eve-2.jpg" class="img-fluid" alt="house gathering">
                 <h3>Questions or Concerns?</h3>
                 <p>
                   If you have further queries or concerns about an upcoming cleaning or booking an appointment, give us a Call! We are always ready to assist you.
@@ -110,6 +110,9 @@
                   Get started with A&A Cleaning Services LLC today, and let us take care of the cleaning so you can relax and enjoy your special event. Just fill out the form, and we'll be in touch with your free estimate. Welcome to a cleaning experience like no other!
                 </p>
               </div><!-- End post content -->
+              <div class="contact-button" style="text-align: center;">
+                <a href="/contact.html" class="btn btn-primary">Go to Contact Page</a>
+              </div>
             </article><!-- End blog post -->
           </div>
         </div>
